syntax = "proto2";

package xls;

message SubField {
  optional int32 sub_index = 1;
}

message Field {
  optional int32 index = 1;
  optional int32 bit_offset = 2;
  optional int32 width = 3;
  repeated int64 foo = 4;
  repeated SubField sub_fields = 5;
}

message Fields {
  repeated Field fields = 1;
  optional Field loner = 2;
}

message AnotherMessage {
  optional int64 pants = 1;
  optional int64 socks = 2;
  optional int64 shoes = 3;
  optional int64 spats = 4;
}
